--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  
  <body>
   <header>
-   <h1 class="titulo-principal"> Loja da Barbara</h1>
+   <h1 class="titulo-principal"> Loja do Bruno</h1>
   </header>
   <main>
    <form>
